# wordscraper

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
data/: data.txt
include/core/: config.hpp  input.hpp  pch.hpp  reader.hpp  recognizer.hpp  screenshot.hpp  solver.hpp  types.hpp
include/utils/: utilities.hpp  utils.hpp
src/: main.cpp
src/core/: input.cpp  reader.cpp  recognizer.cpp  screenshot.cpp  solver.cpp
src/utils/: utils.cpp
tests/: test_input.cpp  test_reader.cpp  test_recognizer.cpp  test_screenshot.cpp  test_solver.cpp
utilities/: create_db.py  data_collision.py  extract_letters.py  process_db.py
